# pytradingapi-typeA

./: .gitignore  pyproject.toml  setup.py
tradingapi_a/: __config__.py
