[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mStock-TradingApi-A"
version = "0.0.1"
description = "A Python SDK for Connecting to mStock Trading API and Streaming API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mirae Asset Capital Markets (India) Private Limited" },
    { name = "Karan Parikh" }
]
urls = { Homepage = "https://github.com/coderkrp/pytradingapi-typeA" }

classifiers = [
    "Development Status :: 3 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Natural Language :: English"
]

dependencies = [
    "attrs==24.2.0",
    "autobahn==24.4.2",
    "Automat==24.8.1",
    "cryptography==43.0.3",
    "pyOpenSSL==25.0.0",
    "requests==2.32.3",
    "service-identity==24.2.0",
    "Twisted==24.7.0",
    "txaio==23.1.1",
    "typing_extensions==4.12.2",
    "zope.interface==7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "responses==0.25.7",
    "PyYAML==6.0.2",
]

[tool.setuptools.packages.find]
where = ["tradingapi_a"]

[tool.setuptools]
package-dir = { "" = "tradingapi_a" }